--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body{
     background-color: green;
     display: grid;
-    grid-template-columns: 1fr 8fr 1fr;
+    grid-template-columns: 1fr 3fr;
     grid-template-rows: 1fr 3fr 1fr;
     border: 2px solid red;
     height: 100vh;
@@ -72,5 +72,19 @@ body{
 
 .wager-menu h3{
     display: inline-block
+}
+
+.field {
+    width: 100%;
+}
+
+.sidebet-chips {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+}
+.sidebet-chips img {
+    height: 35px;
+    width:  35px;
 }
 
