--- a/style.css
+++ b/style.css
@@ -2,12 +2,12 @@ body{
     background-color: green;
     display: grid;
     grid-template-columns: 1fr 3fr;
-    grid-template-rows: 1fr 3fr 1fr;
+    grid-template-rows: 1fr  1fr;
     border: 2px solid red;
     height: 100vh;
     width: 100vw;
 
-}
+} 
 
 
 .gameboard{
@@ -18,6 +18,7 @@ body{
     display: grid;
     grid-template-columns: 1fr 10fr 1fr 10fr 1fr;
     grid-template-rows: 1fr 5fr 1fr ;
+    height: 100px;
     
 }
 
@@ -27,9 +28,16 @@ body{
     grid-column-end: 2;
     grid-row-start: 1;
     grid-row-end: 1;
+    height: 200px;
     
 
 }
+
+/* .sidebet-menu {
+    border: 2px dashed black;
+    grid-column-start: 1;
+    grid-column-end: 1;
+} */
 
 
 
@@ -88,3 +96,14 @@ body{
     width:  35px;
 }
 
+.any7 {
+    width: 100%;
+}
+
+.anyCraps {
+    width: 100%;
+}
+
+.hardway {
+    width: 100%;
+}
