--- a/style.css
+++ b/style.css
@@ -120,3 +120,30 @@ body{
     height: 60px;
     width:  60px;
 }
+
+.placebet-icons{
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+
+}
+.placebet-icons img {
+    .placebet-chips{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+    
+    }
+   
+}
+.placebet-ind {
+    display: flex;
+    justify-content: space-around;
+
+}
+.placebet-ind h4 {
+    display: inline-block;
+    margin-left: 8px;
+    margin-right: 8px;
+
+}
