--- a/style.css
+++ b/style.css
@@ -150,5 +150,33 @@ body{
 
 .field-amount {
     text-align: center;
+    font-size: 20px;
+    
 }
 
+.any7-amount {
+    text-align: center;
+    font-size: 20px;
+    
+}
+
+.anyCrap-amount {
+    text-align: center;
+    font-size: 20px;
+    
+}
+
+.sidebet-menu h2{
+    text-align: center;
+    font-size: 40px;
+}
+
+.sidebet-menu h3{
+    text-align: center;
+    font-size: 30px;
+}
+
+.sidebet-menu h4{
+    text-align: center;
+    font-size: 20px;
+}
