--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 body{
-    background-color: green;
+    background-color: rgb(52, 119, 52);
     display: grid;
     grid-template-columns: 1fr 3fr;
-    grid-template-rows: 1fr 3fr 1fr;
-    border: 2px solid red;
+    grid-template-rows: 1fr 2fr 1fr;
+    /* border: 2px solid red; */
     height: 100vh;
     width: 100vw;
 
@@ -11,30 +11,43 @@ body{
 
 
 .gameboard{
-    border: 2px dashed black;
+    /* border: 2px dashed black; */
     grid-column-start: 2;
     grid-column-end: 2;
     grid-row: 2 / span 1 ;
     display: grid;
-    grid-template-columns: 1fr 10fr 1fr 10fr 1fr;
-    grid-template-rows: 1fr 5fr 1fr ;
+    /* grid-template-columns: 1fr 10fr 1fr 10fr 1fr;
+    grid-template-rows: 1fr 5fr 1fr ; */
     
     
 }
 
+.gameboard img {
+    padding-left: 120px;
+    grid-column-start: 1;
+    grid-column-end: 5;
+    grid-row-start:  1;
+    grid-row-end: 3;
+    height: 60vh;
+    width: 60vw;
+    position: relative;
+    
+}
+
 .scoreboard{
-    border: 2px dashed yellow;
+    /* border: 2px dashed yellow; */
     grid-column-start: 2;
     grid-column-end: 2;
     grid-row-start: 1;
     grid-row-end: 1;
+    text-align: center;
     
     
 
 }
 
 .sidebet-menu {
-    border: 2px dashed black;
+    /* border: 2px dashed black; */
     grid-column-start: 1;
     grid-column-end: 1;
     grid-row-start: 1;
@@ -44,34 +57,44 @@ body{
 
 
 .dice1{
-    border: 2px solid blue;
-    grid-column-start: 2;
+    /* border: 2px solid blue; */
+    /* grid-column-start: 2;
     grid-column-end: 2;
     grid-row-start: 2;
-    grid-row-end: 2;
+    grid-row-end: 2; */
     background-size: contain;
     background-repeat: no-repeat;
+    position: absolute;
+    height: 100px;
+    width: 100px;
+    top: 400px;
+    right: 250px;
 
 }
 
 .dice2{
-    border: 2px solid blue;
-    grid-column-start: 4;
+    /* border: 2px solid blue; */
+    /* grid-column-start: 4;
     grid-column-end: 4;
     grid-row-start: 2;
-    grid-row-end: 2;
-    background-size: contain;
-    background-repeat: no-repeat;
+    grid-row-end: 2; */
+    position: absolute;
+    top: 500px;
+    right: 250px;
+    height: 100px;
+    width: 100px;
+    /* background-size: contain;
+    background-repeat: no-repeat; */
 }
 
 .wager-menu{
-    border: 2px dashed red;
+    /* border: 2px dashed red; */
     grid-column-start: 2;
     grid-column-end: 2;
     /* grid-row-start: 3;
     grid-row-end: 3; */
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
 
 }
 
@@ -91,7 +114,7 @@ body{
 .sidebet-chips {
     width: 100%;
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
 }
 .sidebet-chips img {
     height: 35px;
@@ -179,4 +202,16 @@ body{
 .sidebet-menu h4{
     text-align: center;
     font-size: 20px;
+}
+
+.sidebet-menu hr {
+    color: white;
+    font-weight: bolder;
+    font-size: 30px;
+    
+}
+
+.roll-dice {
+    background-color: red;
+    color: white;
 }
